[metadata]
name = adrenalnmodels
version = 0.1.1
author = Tanishq Agarwal
author_email = adrenaln@gmail.com
description = Central DB Model Migration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tanishqwebknot/adrenalnmodels
classifiers = 
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
  alembic==1.13.2
  asn1crypto==1.5.1
  blinker==1.8.2
  cachetools==5.3.3
  certifi==2024.6.2
  cffi==1.16.0
  charset-normalizer==3.3.2
  click==8.1.7
  colorama==0.4.6
  cryptography==42.0.8
  fitdecode==0.10.0
  fitparse==1.2.0
  Flask==3.0.3
  Flask-Cors==4.0.1
  Flask-Migrate==4.0.7
  Flask-SQLAlchemy==3.1.1
  gevent==24.2.1
  google-api-core==2.19.1
  google-api-python-client==2.135.0
  google-auth==2.30.0
  google-auth-httplib2==0.2.0
  google-auth-oauthlib==1.2.0
  googleapis-common-protos==1.63.2
  greenlet==3.0.3
  httplib2==0.22.0
  idna==3.7
  itsdangerous==2.2.0
  Jinja2==3.1.4
  Mako==1.3.5
  MarkupSafe==2.1.5
  oauth2client==4.1.3
  oauthlib==3.2.2
  paginate==0.5.6
  proto-plus==1.24.0
  protobuf==5.27.2
  psycopg2-binary==2.9.9
  pyasn1==0.6.0
  pyasn1_modules==0.4.0
  pycparser==2.22
  PyJWT==2.8.0
  PyMySQL==1.1.1
  pyOpenSSL==24.1.0
  pyparsing==3.1.2
  python-dateutil==2.9.0.post0
  python-dotenv==1.0.1
  python-editor==1.0.4
  requests==2.32.3
  requests-oauthlib==2.0.0
  rsa==4.9
  six==1.16.0
  SQLAlchemy==2.0.31
  typing_extensions==4.12.2
  uritemplate==4.1.1
  urllib3==2.2.2
  Werkzeug==3.0.3
  
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
  adrenalnmodels = adrenalnmodels.run:main